--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Tech Journey</title>
-  <link rel="stylesheet" href="../css/index.css">
+  <link rel="stylesheet" href="./index.css">
 </head>
 <body>
   <div class="general">
@@ -14,7 +14,7 @@
 
     <div class="total" id="scroll">
       <div class="major">
-        <img src="../images/me.jpg" class="image" width="400px" height="400px" style="border-radius: 50%;" alt="My image">
+        <img src="./images/me.jpg" class="image" width="400px" height="400px" style="border-radius: 50%;" alt="My image">
       </div>
 
       <div class="main" id="scroll">
