--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="total" id="scroll">
       <div class="major">
-        <img src="./images/me.jpg" class="image" width="400px" height="400px" style="border-radius: 50%;" alt="My image">
+        <img src="./me.jpg" class="image" width="400px" height="400px" style="border-radius: 50%;" alt="My image">
       </div>
 
       <div class="main" id="scroll">
